언어변경 로직 수정

--- a/public/locales/en/workspaceSettings.json
+++ b/public/locales/en/workspaceSettings.json
@@ -37,7 +37,8 @@
         "title": "Workspace Settings",
         "language": "Language Settings",
         "languagePlaceholder": "Select a language.",
-        "korean": "Korean"
+        "korean": "Korean",
+        "english": "English"
     },
     "changeModal": {
         "title": "Edit Workspace Information",
