대시보드 내에 통화관련 표시

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -81,6 +81,11 @@
         "total": "Total"
     },
     "button": {
-        "back": "Back"
+        "back": "Back",
+        "viewAll": "View All"
+    },
+    "currency": {
+        "unit": "WON",
+        "format": "%n %u"
     }
 }
